[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flakehell]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
cohesion = ["+*"]
flake8-2020 = ["+*"]
flake8-aaa = ["+*"]
flake8-annotations = ["+*"]
flake8-annotations-complexity = ["+*"]
flake8-annotations-coverage = ["+*"]
flake8-bandit = ["+*"]
flake8-black = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-cognitive-complexity = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-expression-complexity = ["+*"]
flake8-fixme = ["+*"]
flake8-functions = ["+*"]
flake8-future-import = ["+FI18", "+FI90"]
flake8-isort = ["+*"]
flake8-mock = ["+*"]
flake8-mutable = ["+*"]
flake8-print = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
flake8-typing-imports = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pylint = ["+*"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Omer Katz <omer.drow@gmail.com>"]
description = ""
name = "jumpstarter"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7.0"
transitions = { version = "^0.8.7", extras = ['diagrams'], optional = true }
transitions-anyio = "^0.2.0"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
cohesion = "^1.0.0"
darglint = "^1.6.0"
flake8-2020 = "^1.6.0"
flake8-aaa = "^0.11.1"
flake8-annotations = "^2.5.0"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.5"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-expression-complexity = "^0.0.9"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.5"
flake8-future-import = "^0.4.6"
flake8-isort = "^4.0.0"
flake8-mock = "^0.3"
flake8-mutable = "^1.2.0"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.3.0"
flake8-spellcheck = "^0.23.0"
flake8-typing-imports = "^1.10.1"
flakehell = "^0.9.0"
isort = "^5.7.0"
mccabe = "^0.6.1"
mock = { version = "^4.0.3", python = "< 3.8" }
pep8-naming = "^0.11.1"
pylint = "^2.6.0"
pytest = "^6.0"
pytest-cov = "^2.11.1"
pytest-github-actions-annotate-failures = "^0.1.1"
pytest-monkeytype = "^1.1.0"
pytest-randomly = "^3.4"
pytest-subtests = "^0.3"
pytest-timeout = "^1.4.2"
pytest-xdist = "^2.2.0"
pyupgrade = "^2.7.4"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-celery = "^2.0.0"
sphinx-pyreverse = "^0.0.13"
toml-sort = "^0.18.0"
trio = "^0.17"

[tool.poetry.extras]
diagrams = ["transitions"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:A private pytest class or function was used.:pytest.PytestDeprecationWarning'
]
