[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jumpstarter"
version = "0.1.0"
description = ""
authors = ["Omer Katz <omer.drow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
transitions-anyio = "^0.1.0"
sphinx-celery = {version = "^2.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-subtests = "^0.3"
pytest-randomly = "^3.4"
trio = "^0.17"
curio = "^1.4"
black = "^20.8b1"

[tool.poetry.extras]
readthedocs = ["sphinx-celery"]
